--- a/requirements.pip.dev.txt
+++ b/requirements.pip.dev.txt
@@ -1,4 +1,4 @@
-doit >= 0.33.1
-furo >= 2021.7.28b40
-hat-doit >= 0.6.0
-sphinx >= 4.1.2
+doit ~= 0.33.1
+furo >= 2021.10.9
+hat-doit ~= 0.7.0
+sphinx ~= 4.2.0
